# QDPlay

./: .gitignore  CMakeLists.txt  README.md  cross.cmake
control-receiver/: qd_control_receiver.c  qd_control_receiver.h
hardware/opi-zero-2w/case/: orange-pi-zero-2w-case-bottom.stl  orange-pi-zero-2w-case-top.stl
inc/: accessory.h  hu_message.h  usb_accessory.h
inc/Macros/: comand_types.h  data_types.h
inc/Messages/: app_message.h  app_status.h  common_header.h  land_mode.h  messages.h  mirror_support.h  screen_header.h  speech.h  speech_status.h  upgrade.h  version.h
inc/logging/: logging.h
inc/macros/: comand_types.h  data_types.h
inc/messages/: app_status.h  common_comand_header.h  common_header.h  input_control.h  land_mode.h  messages.h  new_message_common_header.h  screen_header.h  speech.h  upgrade.h  version.h
inc/messages/v1/: app_message.h  heart_beat_v1.h  messages.h  mirror_support.h  play_status.h  screen_header.h
inc/messages/v2/: message_car_info_parameters_v2.h  message_cmd_response_v2.h  message_common_header_v2.h  message_heart_beat_v2.h  message_phone_info_v2.h  message_touch_event_v2.h  message_update_status_v2.h  message_video_ctrl_parameters_v2.h  message_video_frame_v2.h  message_video_support_prarameters_v2.h
inc/services/messaging_service/: messaging_service.h  messaging_service_parcels.h
inc/usb_accessory/: usb_accessory.h  usb_accessory_message_processor.h  usb_accessory_worker.h  usb_active_accessory.h
inc/usb_accessory/message_processor/: message_processor.h
inc/usb_accessory/message_processor/v1/: message_processor_v1.h
inc/usb_accessory/message_processor/v2/: message_processor_v2.h
inc/utils/: common_utils.h  crc16.h  log.h
inc/video/: video_receiver.h  video_sender.h
src/: hu_message.c  main.c  usb_accessory.c  usb_accessory_message_processor.c  usb_accessory_worker.c
src/logging/: logging.c
src/messages/: app_message.c  app_status.c  land_mode.c  mirror_support.c  new_message_common_header.c  screen_header.c  speech.c  upgrade.c  version.c
src/messages/v1/: app_message.c  app_status.c  heart_beat_v1.c  land_mode.c  mirror_support.c  screen_header.c  speech.c  upgrade.c  version.c
src/messages/v2/: message_car_info_parameters_v2.c  message_cmd_response_v2.c  message_common_header_v2.c  message_heart_beat_v2.c  message_phone_info_v2.c  message_touch_event_v2.c  message_update_status_v2.c  message_video_ctrl_parameters_v2.c  message_video_frame_v2.c  message_video_support_prarameters_v2.c
src/services/messaging_service/: messaging_service.c
src/services/video_receiver/: video_receiver.c
src/usb_accessory/: usb_accessory.c  usb_accessory_message_processor.c  usb_accessory_worker.c  usb_active_accessory.c
src/usb_accessory/message_processor/v1/: message_processor_v1.c
src/usb_accessory/message_processor/v2/: message_processor_v2.c
src/utils/: cJSON.c  common_utils.c  crc16.c
src/video/: video_receiver.c  video_sender.c
video-sender/: qd_video_sender.c  qd_video_sender.h
